--- a/index.html
+++ b/index.html
@@ -3,174 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Клуб Четырех Коней</title>
+	<title>Cnews conferences</title>
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	<section class="main">
-		<div class="wrap">
-			<a href="#" class='main__logo'><img src="img/logo.svg" data="img/logo.svg" alt=""></a>
-			<h1 class='main__title'>
-				Превратите<br>уездный город<br>
-				<span class='main__title-offset'>в столицу<br><span>земного шара</span></span>
-			</h1>
-			<p class='main__description'>Оплатите взнос на&nbsp;телеграммы для организации Международного васюкинского турнира по&nbsp;шахматам</p>
-			<div class="main__btns">
-				<a href="#donate" class='btn btn__default'>Поддержать <br class='sm-none'>шахматную мысль</a>
-				<a href="#more" class='btn btn__add'>Подробнее <br class='sm-none'>о турнире</a>
-			</div>
 
-		</div>
-		<img src="img/circle.webp" data="img/circle.webp" class='main__circle' alt="">
-		<div class='main__collage'></div>
-	</section>
-	<section class="running-line">
-	 <div class="running-line__track -f">
-	    <div class="running-line__content"><span>Дело помощи утопающим — дело рук самих утопающих!</span><span>Шахматы двигают вперед не только культуру, но и экономику!</span><span>Лед тронулся, господа присяжные заседатели!</span></div>
-
-	  </div>
-	</section>
-	<section class='info' >
-		<div class="wrap info__textwp" id='donate'>
-			<p class="info__textsp">
-				Чтобы поддержать Международный васюкинский турнир <img data="img/photo1.jpg" class='info__photo' alt="">посетите лекцию на тему: <span class='redtextb'>«Плодотворная дебютная идея»</span>
-			</p>
-			
-		</div>
-		<div class="wrap info__session" id='more'>
-			<img data="img/collage.webp" class='info__collage' alt="">
-			<p class="info__textsp">
-				и&nbsp;Сеанс <span class='redtextb'>одновременной игры в&nbsp;шахматы на&nbsp;160 досках</span> гроссмейстера О.&nbsp;Бендера
-			</p>
-			<div class='info__table'>
-				<div class='info__table-row'>
-					<div class='info__table-cell'>Место проведения:</div>
-					<div class='info__table-cell'>Клуб «Картонажник»</div>
-				</div>
-				<div class='info__table-row'>
-					<div class='info__table-cell'>Дата и время мероприятия:</div>
-					<div class='info__table-cell'>22 июня 1927 г. в 18:00</div>
-				</div>
-				<div class='info__table-row'>
-					<div class='info__table-cell'>Стоимость входных билетов:</div>
-					<div class='info__table-cell'>20 коп.</div>
-				</div>
-				<div class='info__table-row'>
-					<div class='info__table-cell'>Плата за игру:</div>
-					<div class='info__table-cell'>50 коп.</div>
-				</div>
-				<div class='info__table-row'>
-					<div class='info__table-cell'>Взнос на телеграммы:</div>
-					<div class='info__table-cell'><span class='info__table-oldprice'>100 руб.</span> 21 руб. 16 коп.</div>
-				</div>
-			</div>
-			<p class='info__table-blue'>По&nbsp;всем вопросам обращаться в&nbsp;администрацию к&nbsp;К.&nbsp;Михельсону</p>
-			
-		</div>
-	</section>
-	<section class="stages">
-		<div class="wrap">
-			<h2 class='heading'>Этапы преображения<br> Васюков <span class='text-blue'>Будущие источники<br class='sm-none'> обогащения васюкинцев</span></h2>
-			<div class="stages__content">
-				<div class="stages__wrap">
-					<div class="stages__item">
-						<p class="stages__text">Строительство железнодорожной магистрали Москва-Васюки</p>
-					</div>
-					<div class="stages__item">
-						<p class="stages__text">Открытие фешенебельной гостиницы &laquo;Проходная пешка&raquo; и&nbsp;других небоскрёбов</p>
-					</div>
-					<div class="stages__item">
-						<p class="stages__text">Поднятие сельского хозяйства в&nbsp;радиусе на&nbsp;тысячу километров: производство овощей, фруктов, икры, шоколадных конфет</p>
-					</div>
-					<div class="stages__item">
-						<p class="stages__text">Строительство дворца для турнира</p>
-					</div>
-					<div class="stages__item">
-						<p class="stages__text">Размещение гаражей для гостевого<br>автотранспорта</p>
-					</div>
-					<div class="stages__item">
-						<p class="stages__text">Постройка сверхмощной радиостанции для передачи всему миру сенсационных результатов</p>
-					</div>
-					<div class="stages__item">
-						<p class="stages__text">Создание аэропорта &laquo;Большие Васюки&raquo; с&nbsp;регулярным отправлением почтовых самолётов и&nbsp;дирижаблей во&nbsp;все концы света, включая Лос-Анжелос и&nbsp;Мельбурн</p>
-					</div>
-				</div>
-			</div>
-			<div class='slider__navigation stages__navigation'>
-				<button id="stages-left"></button>
-				<div class='slider__dots'>
-				</div>
-      			<button id="stages-right"></button>
-			</div>
-		</div>
-	</section>
-	<section class="participants">
-		<div class="wrap">
-			<div class="participants__heading">
-				<h2 class='heading'>Участники турнира</h2>
-			</div>
-			<div class='wrapper'>
-				<div class="participants__container">
-					<div class="participants__track">
-						<div class="participants__item">
-							<img data="img/ava.webp" class='participants__ava' alt="">
-							<p class="participants__name">Хозе-Рауль Капабланка</p>
-							<p class="participants__status">Чемпион мира по шахматам</p>
-							<a href="" class="btn btn__smallblue">Подробнее</a>
-						</div>
-						<div class="participants__item">
-							<img data="img/ava.webp" class='participants__ava' alt="">
-							<p class="participants__name">Эммануил Ласкер</p>
-							<p class="participants__status">Чемпион мира по шахматам</p>
-							<a href="" class="btn btn__smallblue">Подробнее</a>
-						</div>
-						<div class="participants__item">
-							<img data="img/ava.webp" class='participants__ava' alt="">
-							<p class="participants__name">Александр Алехин</p>
-							<p class="participants__status">Чемпион мира по шахматам</p>
-							<a href="" class="btn btn__smallblue">Подробнее</a>
-						</div>
-						<div class="participants__item">
-							<img data="img/ava.webp" class='participants__ava' alt="">
-							<p class="participants__name">Арон Нимцович</p>
-							<p class="participants__status">Чемпион мира по шахматам</p>
-							<a href="" class="btn btn__smallblue">Подробнее</a>
-						</div>
-						<div class="participants__item">
-							<img data="img/ava.webp" class='participants__ava' alt="">
-							<p class="participants__name">Рихард Рети</p>
-							<p class="participants__status">Чемпион мира по шахматам</p>
-							<a href="" class="btn btn__smallblue">Подробнее</a>
-						</div>
-						<div class="participants__item">
-							<img data="img/ava.webp" class='participants__ava' alt="">
-							<p class="participants__name">Остап Бендер</p>
-							<p class="participants__status">Гроссмейстер</p>
-							<a href="" class="btn btn__smallblue">Подробнее</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class='slider__navigation participants__navigation'>
-				<button id="participants-left"></button>
-				<span class='slider__info'>
-				</span>
-      			<button id="participants-right"></button>
-			</div>
-		</div>
-	</section>
-	<section class="running-line">
-	 <div class="running-line__track -s">
-	    <div class="running-line__content"><span>Дело помощи утопающим — дело рук самих утопающих!</span><span>Шахматы двигают вперед не только культуру, но и экономику!</span><span>Лед тронулся, господа присяжные заседатели!</span></div>
-	  </div>
-	</section>
-     
-
-	<footer class='mfooter'>
-		<div class="wrap">
-			<p class="mfooter__text">Все персонажи, события и&nbsp;цитаты являются вымышленными и&nbsp;не&nbsp;принадлежат создателям сайта. С&nbsp;подробностями можно познакомиться в&nbsp;главе XXXIV романа Ильи Ильфа и&nbsp;Евгения Петрова &laquo;Двенадцать стульев&raquo;.</p>
-		</div>
-	</footer>
 	<script src="js/main.min.js"></script>
 </body>
 </html>
