--- a/index.html
+++ b/index.html
@@ -2,12 +2,95 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cnews conferences</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+	<title>CNEWS CONFERENCES</title>
 	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+	<link rel="stylesheet" href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css">
 </head>
 <body>
+	<section class="top">
+		<div class="wrap">
+			<header class="header">
+				<div class="header__logo">
+					<img src="img/logo.svg" data="img/logo.svg" class='header__logo-img' alt="">
+				</div>
+				<div class="header__menu">
+					<ul class="header__menu">
+						<li class='header__item'><a href="" class='header__link'>Мероприятия</a></li>
+						<li class='header__item'><a href="" class='header__link'>Архив</a></li>
+						<li class='header__item'><a href="" class='header__link'>Материалы</a></li>
+						<li class='header__item'><a href="" class='header__link'>О компании</a></li>
+					</ul>
+					<a href="#" class='btn btn__red'>Заказать мероприятие</a>
+				</div>	
+			</header>
 
-	<script src="js/main.min.js"></script>
+			<div class="swiper top-slider">
+			  <div class="swiper-wrapper">
+			    <div class="swiper-slide">
+			    	<div class="top-slider__item">
+			    		<div class="top-slider__img" style="background-image:url('./img/banner-img.jpg')"></div>
+				    	<div class="top-slider__content">
+				    		<div class="top-slider__w">Конференция</div>
+				    		<div class="top-slider__date">09.02.2023</div>
+				    		<div class="top-slider__title">Business Process Management <b>2023</b></div>
+				    		<a href="" class='top-slider__link'>Подробнее</a>
+				    	</div>
+			    	</div>	    	
+			    </div>
+			    <div class="swiper-slide">
+			    	<div class="top-slider__item">
+			    		<div class="top-slider__img" style="background-image:url('./img/banner-img.jpg')"></div>
+				    	<div class="top-slider__content">
+				    		<div class="top-slider__w">Конференция</div>
+				    		<div class="top-slider__date">09.02.2023</div>
+				    		<div class="top-slider__title">Business Process Management <b>2023</b></div>
+				    		<a href="" class='top-slider__link'>Подробнее</a>
+				    	</div>
+			    	</div>	    	
+			    </div>
+			    <div class="swiper-slide">
+			    	<div class="top-slider__item">
+			    		<div class="top-slider__img" style="background-image:url('./img/banner-img.jpg')"></div>
+				    	<div class="top-slider__content">
+				    		<div class="top-slider__w">Конференция</div>
+				    		<div class="top-slider__date">09.02.2023</div>
+				    		<div class="top-slider__title">Business Process Management <b>2023</b></div>
+				    		<a href="" class='top-slider__link'>Подробнее</a>
+				    	</div>
+			    	</div>	    	
+			    </div>
+			    <div class="swiper-slide">
+			    	<div class="top-slider__item">
+			    		<div class="top-slider__img" style="background-image:url('./img/banner-img.jpg')"></div>
+				    	<div class="top-slider__content">
+				    		<div class="top-slider__w">Конференция</div>
+				    		<div class="top-slider__date">09.02.2023</div>
+				    		<div class="top-slider__title">Business Process Management <b>2023</b></div>
+				    		<a href="" class='top-slider__link'>Подробнее</a>
+				    	</div>
+			    	</div>	    	
+			    </div>
+			  </div>
+			  <div class="swiper-pagination"></div>
+			</div>
+			<h2 class="heading">Предстоящие<br/><span class="withmargin mintcolor">мероприятия</span></h2>
+		</div>
+		
+	</section>
+	
+
+	<footer class='footer' data-cursor="-inverse">
+		<div class="wrap">
+			
+		</div>
+	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+	<script src="https://unpkg.com/split-type"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+	<script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+	<script src='js/main.min.js'></script>
 </body>
 </html>
